# SecurityOps-Assistant

./: .gitattributes  .gitignore  README.md  SecurityOps-Assistant-Proposal-Presentation.docx  SecurityOps-Assistant-Proposal.pptx  SecurityOps-Assistant.pptx  pyproject.toml  requirements.txt
.claude/: launch.json
docs/: ARCHITECTURE.md  PLUGINS.md
scripts/: install.sh
securityops/: __init__.py  __main__.py  app.py
securityops/ai/: __init__.py  assistant.py  knowledge.py  llm.py
securityops/bugbounty/: __init__.py  methodology.py  planner.py  report.py  scope.py  triage.py
securityops/config/: default_config.yaml
securityops/core/: __init__.py  config.py  context.py  database.py  logging_config.py  paths.py  plugins.py  tasks.py  tools.py
securityops/disclosure/: __init__.py  curate.py  email_gen.py  report.py  security_txt.py
securityops/gui/: __init__.py  main_window.py  theme.py  widgets.py
securityops/models/: __init__.py  enums.py  records.py
securityops/plugins/: __init__.py  assets.py  assistant_panel.py  bugbounty.py  disclosure.py  findings.py  reporting_panel.py  scans.py  tool_launcher.py  workflow_chat.py
securityops/reporting/: __init__.py  generator.py
securityops/reporting/templates/: report.html  (+2 more)
securityops/workflow/: __init__.py  engine.py  explain.py  parsers.py  plan.py  planner.py
tests/: conftest.py  test_assistant.py  test_bugbounty.py  test_config.py  test_database.py  test_disclosure.py  test_explain.py  test_llm.py  test_models.py  test_parsers.py  test_planner.py  test_reporting.py  test_tools.py  test_triage.py
