[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "securityops-assistant"
version = "0.1.0"
description = "Offline, local-only desktop assistant for authorized security assessments on Kali Linux."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "SecurityOps" }]
keywords = ["security", "pentest", "kali", "offline", "assessment"]

dependencies = [
    "PySide6>=6.6",
    "PyYAML>=6.0",
    "Jinja2>=3.1",
    "weasyprint>=60; platform_system == 'Linux'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "mypy>=1.8",
    "ruff>=0.3",
]

[project.scripts]
securityops = "securityops.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["securityops*"]

[tool.setuptools.package-data]
securityops = ["config/*.yaml", "reporting/templates/*.html", "gui/resources/*.qss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"
